# WikiScraper

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
docs/: prompt.txt  terminos  wikigetSequenceDiagram.md
docs/models/: cli.txt  file_saver.txt  logging_config.txt  wikiscraper.txt
docs/wikiscraper/: a.md  b.md
src/cli/: __init__.py  cli.py
src/errors/: __init__.py  cli.py  core.py  graph.py  service.py  storage.py  wiki.py
src/graph/: __init__.py  graph_manager.py
src/models/: __init__.py  search_result.py  wiki_article.py  wiki_graph.py  wiki_raw.py  wiki_tree.py
src/service/: __init__.py  wiki_service.py
src/service/models/: __init__.py  wiki_article.py  wiki_tree.py
src/storage/: __init__.py  file_saver.py
src/utils/: __init__.py  setup_logging.py
src/wikiscraper/: __init__.py  wikiscraper.py
