[project]
name = "wikiscraper" 
version = "0.1.0"
description = "" 
dependencies = [
    "click >= 8.1.7",
    "beautifulsoup4 >= 4.10.0",
    "requests >= 2.28.0",
    "urllib3 >= 1.26.0",
    "lxml >= 4.6.0"
]

[project.scripts]
wiki = "src.cli:main"

[tool.setuptools.packages]
find = { include = ["src"] }
